# q3modelconverter

./: .gitignore  CMakeLists.txt  README.md  mkdocs.yml
.github/workflows/: ci.yml  docs.yml  packages.yml
contrib/blender/: subdivide.py
contrib/blender/io_scene_q3model/: __init__.py
contrib/completions/: _modelconverter  modelconverter.bash
docs/: cli-reference.md  formats.md  getting-started.md  index.md  modelconverter.1  workflows.md
scripts/: roundtrip-test.sh
src/: cgltf.h  cgltf_write.h  mc_3ds.c  mc_animcfg.c  mc_ase.c  mc_common.c  mc_common.h  mc_decimate.c  mc_gltf_read.c  mc_gltf_write.c  mc_image.c  mc_iqm.c  mc_md3.c  mc_mdr.c  mc_pk3.c  mc_player.c  mc_q3shader.c  mc_subdivide.c  modelconverter.c  modelconverter.h
src/miniz/: miniz_export.h
tests/: test_roundtrip.c
